--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 embedded-hal = "0.2"
 nb = "0.1"
-void = "1.0"
+void = { version="1.0", default-features=false }
 
 [dev-dependencies]
-heapless = ""
+heapless = "0.5"
